--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -1,10 +1,15 @@
+
 .Board
 {
   height: 100vh;
   display: flex;
 
+  background-color: #ece582;
+
+
   justify-content: center;
   align-items: center;
+
 }
 
 .square
@@ -15,13 +20,45 @@
   align-items: center;
 
   box-sizing: border-box;
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   background-color: coral;
   border-radius: 10px;
   border: solid 2px black;
   margin: 5px;
 
-  font-size: 45px;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+h1
+{
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+
+  background-color: #ece582;
+
+}
+
+.pop
+{
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  background-color: #ece582;
+
+}
+.reset
+{
+  height: 40px;
+  width: 100px;
+  position: relative;
+  bottom: 110px;
+  border-radius: 10px;
+  background-color: #F5C529;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 }
